--- a/admin/config.yml
+++ b/admin/config.yml
@@ -95,3 +95,19 @@ collections:
           hint: "Path for the page, e.g., /about/",
         }
       - { label: "Body", name: "body", widget: "markdown" }
+
+  - name: "glossary"
+    label: "Glossary"
+    files:
+      - label: "Glossary Terms"
+        name: "glossary" 
+        file: "_data/glossary.yml"
+        fields:
+          - label: "Glossary Entries"
+            name: "terms"
+            widget: "list"
+            summary: "{{term}} - {{definition}}"
+            fields:
+              - {label: "Term", name: "term", widget: "string"}
+              - {label: "Definition", name: "definition", widget: "text"}
+              - {label: "Reference URL", name: "url", widget: "string", required: false}
