--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -2,9 +2,15 @@ terms:
   - term: Sydon
     definition: Herr der Stürme, einst Herr von ganz Thylea. Er erschuf Zentauren, Gyganen und Zyklopen.
     url: ''
+    image: ''
+    image_alt: Sydon, Herr der Stürme
   - term: Lutheria
     definition: Herrin des Todes, Schwester und Frau von Sydon.
     url: ''
+    image: ''
+    image_alt: Lutheria, Herrin des Todes
   - term: D20
     definition: A twenty-sided die used in D&D for most rolls.
     url: ''
+    image: ''
+    image_alt: Twenty-sided die
