--- a/admin/config.yml
+++ b/admin/config.yml
@@ -100,10 +100,10 @@ collections:
     label: "Glossary"
     files:
       - label: "Glossary Terms"
-        name: "glossary" 
+        name: "glossary"
         file: "_data/glossary.yml"
         fields:
-          - label: "Glossary Entries"
+          - label: "Terms"
             name: "terms"
             widget: "list"
             summary: "{{term}} - {{definition}}"
@@ -111,3 +111,5 @@ collections:
               - {label: "Term", name: "term", widget: "string"}
               - {label: "Definition", name: "definition", widget: "text"}
               - {label: "Reference URL", name: "url", widget: "string", required: false}
+              - {label: "Image", name: "image", widget: "image", required: false, hint: "Character/creature/item image"}
+              - {label: "Image Alt Text", name: "image_alt", widget: "string", required: false, hint: "Description for accessibility"}
